--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,33 @@
+/* 1️⃣ FONT FACE */
+@font-face {
+  font-family: "SF Pro Display";
+  src: url("/src/assets/fonts/SFProDisplay-Regular.otf") format("opentype");
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: "SF Pro Display";
+  src: url("/src/assets/fonts/SFProDisplay-Medium.otf") format("opentype");
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: "SF Pro Display";
+  src: url("/src/assets/fonts/SFProDisplay-Bold.otf") format("opentype");
+  font-weight: 700;
+}
+
+/* 2️⃣ IMPORT TAILWIND */
 @import "tailwindcss";
+
+/* 3️⃣ OVERRIDE THEME TAILWIND */
+@theme {
+  --font-sans: "SF Pro Display", system-ui, sans-serif;
+}
+
+/* 4️⃣ GLOBAL APPLY */
+@layer base {
+  body {
+    font-family: var(--font-sans);
+  }
+}
