--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,24 @@
 /* 1️⃣ FONT FACE */
 @font-face {
   font-family: "SF Pro Display";
-  src: url("/src/assets/fonts/SFProDisplay-Regular.otf") format("opentype");
+  src: url("/src/assets/fonts/SF-Pro-Display-Medium.otf") format("opentype");
   font-weight: 400;
 }
 
 @font-face {
   font-family: "SF Pro Display";
-  src: url("/src/assets/fonts/SFProDisplay-Medium.otf") format("opentype");
-  font-weight: 500;
+  src: url("/fonts/SF-Pro-Display-Regular.otf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
 }
 
 @font-face {
   font-family: "SF Pro Display";
-  src: url("/src/assets/fonts/SFProDisplay-Bold.otf") format("opentype");
+  src: url("/fonts/SF-Pro-Display-Bold.otf") format("opentype");
   font-weight: 700;
+  font-style: normal;
 }
+
 
 /* 2️⃣ IMPORT TAILWIND */
 @import "tailwindcss";
